# aws-cdk-agent-core

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  biome.json  cdk.json  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.husky/: pre-commit
docs/: Architecture.drawio
lib/: agent-core-stack.ts  aws-cdk-agent-core-stack.ts  pipeline-app-stage.ts  pipeline-stack.ts
lib/constructs/: agent-core.ts  api-gw.ts  auth.ts  cdn.ts  datastore.ts  estate-knowledge-base.ts  index.ts  knowledge-base.ts
lib/stack/: agent-core-stack.ts  index.ts  sample-stack.ts
src/agent/: .dockerignore  .env.example  Dockerfile  agent_tools.py  main.py  models.py  pyproject.toml  sample_invoke.py  settings.py  sub_agents.py  utils.py
src/cloudfront/: index.js
src/lambda/: agent-core-proxy.ts
src/lambda/apigw-buffered-router/: index.ts
src/lambda/apigw-router/: env.ts  history-api.ts  index.ts  invoke-api.ts  local-index.ts  root-api.ts  schema.ts  utils.ts
src/lambda/apigw-router/route/: history-api.ts  invoke-api.ts  root-api.ts
src/lambda/apigw-stream-router/: index.ts  schema.ts
test/: aws-cdk-agent-core.test.ts
tests/: aws-cdk-agent-core.test.ts
tests/src/agent/: test_main.py
tools/: csv_to_md.py
