[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "aws-opentelemetry-distro>=0.15.0",
    "bedrock-agentcore>=1.3.0",
    "fastapi>=0.129.0",
    "feedparser>=6.0.12",
    "nanoid>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pynamodb>=6.1.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.2.0",
    "strands-agents>=1.26.0",
    "strands-agents-tools>=0.2.20",
    "tavily>=1.1.0",
    "uvicorn>=0.40.0",
]
